Basic working version

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     id="wasm-example"
   >
     <script type="module">
-      import init from "./pkg/force_graph_wgpu.js";
+      import init from "./pkg/tp_twitter.js";
       console.log(window.innerWidth, window.innerHeight);
       //   document.addEventListener('load', () => )
       init().then(() => console.log("WASM LOADED!"));
